# tr-youtube

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  bindings.ts  resizer.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: app_state.rs  err.rs  lib.rs  main.rs  utils.rs
src-tauri/src/tasks/: shell_task.rs
src/components/: TerminalListView.tsx  TerminalView.tsx  YoutubeDownloadView.tsx  subLang.ts
src/listeners/: HttpNotifyListener.tsx  TaskNotifyListener.tsx
src/routes/: AppLayout.tsx  ErrorView.tsx  MainView.tsx
src/stores/: selectedTermIdStore.ts  taskNotifyMapStore.ts  termRefStore.ts
