[package]
name = "tr-youtube"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tr_youtube_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript", "javascript"] }
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tokio = { version = "1.47.1", features = ["macros", "fs", "io-util", "rt-multi-thread", "process", "rt"] }
thiserror = "2.0.12"
serde_with = "3.14.0"
encoding = "0.2.33"
windows = { version = "0.61.3", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
schemars = { version = "1.0.4", features = ["indexmap2"] }
dirs-next = "2.0.0"
tauri-plugin-dialog = "2"
